@@ -1,3 +1,12 @@
+2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR middle-end/37731
+	* expmed.c (expand_mult): Properly check DImode constant in
+	CONST_DOUBLE.
+
 2008-09-28  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR middle-end/36575
